added imgs for NBs, updated NBs

--- a/CRAGIG_run1/Notebooks/data_processing/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/CRAGIG_RUN1.ipynb
@@ -3651,7 +3651,33 @@
     "\n",
     "I need to filter out SNPs so that I have only one per RAD tag, because otherwise I may be treating molecular markers as unliked when they are potentially linked and biasing my results.\n",
     "\n",
-    "Working on a script to do that!"
+    "Working on a script to do that! Notebook [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/script_demos/filter_one_SNP_per_RADtag.py.ipynb), script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/filtering/filter_one_SNP_per_RADtag.py).\n",
+    "\n",
+    "## Exploratory Plots: Fis, Hs, read depth, sequence position\n",
+    "\n",
+    "I made plots to explore relationships between Fis, Hs, read depth, and sequence position in this [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb).\n",
+    "\n",
+    "After filtering for just one SNP per RAD tag, across population Fis and Hs look like this:\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "Here are the major results from my exploratory plots:\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img]()"
    ]
   },
   {
