updated NBs, added img for NB

--- a/CRAGIG_run1/Notebooks/data_processing/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/CRAGIG_RUN1.ipynb
@@ -3659,10 +3659,16 @@
     "\n",
     "After filtering for just one SNP per RAD tag, across population Fis and Hs look like this:\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/fis_dist_snps_onesnppertag_20170426.png?raw=true)\n",
     "\n",
-    "![img]()\n",
-    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/dist_hs_onesnppertag_20170426.png?raw=true)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here are the major results from my exploratory plots:\n",
     "\n",
     "![img]()\n",
@@ -3679,15 +3685,6 @@
     "\n",
     "![img]()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
