added many imgs for NBs

--- a/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb
@@ -846,6 +846,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yikes - I took a look at the sequences, and there are several catalog loci that look more related than not at first glance. E.g.,\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/3_diff_loci_maybepars.png?raw=true)\n",
+    "\n",
+    "My adviser recommended that I visualize how related the catalog loci are, perhaps with OMEGA, and Mary suggested with CoGe. We also chatted that I should maybe rerun Bowtie using Bowtie2, which apparently better accounts for gaps in alignments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
