--- a/CRAGIG_run1/Notebooks/data_processing/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/CRAGIG_RUN1.ipynb
@@ -3657,34 +3657,55 @@
     "\n",
     "I made plots to explore relationships between Fis, Hs, read depth, and sequence position in this [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb).\n",
     "\n",
-    "After filtering for just one SNP per RAD tag, across population Fis and Hs look like this:\n",
+    "After filtering for just one SNP per RAD tag, across population Fis, Expected, and Observed Heterozygosity looked like this:\n",
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/fis_dist_snps_onesnppertag_20170426.png?raw=true)\n",
     "\n",
-    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/dist_hs_onesnppertag_20170426.png?raw=true)\n",
-    "\n"
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/exp_het_snps_20170426.png?raw=true)\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/obs_het_snps_20170426.png?raw=true)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are the major results from my exploratory plots:\n",
+    "Comparing Fis by Expected and Observed Heterozygosity:\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/fis_by_exp_het_snps_20170426.png?raw=true)\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/fis_by_obs_het_snps_20170426.png?raw=true)\n",
     "\n",
-    "![img]()\n",
+    "Comparing Fis and Observed Heterozygosity by SNP position in RAD tag:\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/fis_by_snp_pos_20170426.png?raw=true)\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/het_by_snp_pos_20170426.png?raw=true)\n",
     "\n",
-    "![img]()\n",
+    "Comparing Fis and mean RAD tag read depth, first entire and second only with x axis up to 2000:\n",
     "\n",
-    "![img]()"
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/read_depth_fis_snps_20170426.png?raw=true)\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/read_depth_fis_snps_ONLY2000_20170426.png?raw=true)\n",
+    "\n",
+    "Comparing Observed Heterozygosity and mean RAD tag read depth, first entire and second only with x axis up to 2000:\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/read_depth_het_snps_20170426.png?raw=true)\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/read_depth_obs_het_snps_ONLY2000_20170426.png?raw=true)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
