added img of alignment for NB

--- a/CRAGIG_run1/Notebooks/data_processing/Exploring_similarity_of_loci_to_pick_parameters_for_rerunning_pipeline.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Exploring_similarity_of_loci_to_pick_parameters_for_rerunning_pipeline.ipynb
@@ -2,20 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Exploring similary of loci - I think I'm oversplitting loci\n",
     "\n",
     "**20170501**\n",
     "\n",
-    "Last week, I made a bunch of exploratory plots to understand my data, and it led me to align my catalog loci to each other in search of paralogous loci/oversplitting loci. And from a preliminary visual assessment, it looks like I did oversplit. I wanted to take some time now to figure out how clustering at different levels of similarity affects the outcome number of loci and how much I believe those loci are clustered correctly (aka, allowing more mismatches in Stacks, or clustering with other software completely like Swarm or mothur)."
+    "Last week, I made a bunch of exploratory plots to understand my data, and it led me to align my catalog loci to each other in search of paralogous loci/oversplitting loci. And from a preliminary visual assessment, it looks like I did oversplit. I wanted to take some time now to figure out how clustering at different levels of similarity affects the outcome number of loci and how much I believe those loci are clustered correctly (aka, allowing more mismatches in Stacks, or clustering with other software completely like Swarm or mothur).\n",
+    "\n",
+    "Another thought is that I should probably look at what sequences I lost during the Bowtie and Blast filtering steps, because I lost most of my loci (I think it was 85%), and maybe there are clues in there as to what I should do next."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
