changed names of NBs, updated NBs

--- a/CRAGIG_run1/Notebooks/data_processing/Exploring_similarity_of_loci_to_pick_parameters_for_rerunning_pipeline.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Exploring_similarity_of_loci_to_pick_parameters_for_rerunning_pipeline.ipynb
@@ -7,13 +7,21 @@
     "editable": true
    },
    "source": [
-    "## Exploring similary of loci - I think I'm oversplitting loci\n",
+    "## Exploring similarity of loci - I think I'm oversplitting loci\n",
     "\n",
     "**20170501**\n",
     "\n",
     "Last week, I made a bunch of exploratory plots to understand my data, and it led me to align my catalog loci to each other in search of paralogous loci/oversplitting loci. And from a preliminary visual assessment, it looks like I did oversplit. I wanted to take some time now to figure out how clustering at different levels of similarity affects the outcome number of loci and how much I believe those loci are clustered correctly (aka, allowing more mismatches in Stacks, or clustering with other software completely like Swarm or mothur).\n",
     "\n",
-    "Another thought is that I should probably look at what sequences I lost during the Bowtie and Blast filtering steps, because I lost most of my loci (I think it was 85%), and maybe there are clues in there as to what I should do next."
+    "Another thought is that I should probably look at what sequences I lost during the Bowtie and Blast filtering steps, because I lost most of my loci (~90%), and maybe there are clues in there as to what I should do next.\n",
+    "\n",
+    "And, yet another thought is I should see what happens when I retry the Bowtie and BLAST filtering using bowtie 2 because it allows for gaps in alignments. It seems like I should switch over to it anyway now that I know there are plenty of indels in mydata.\n",
+    "\n",
+    "Here's one tiny piece of an alignment I made of the loci that were kept after bowtie filtering (lost 88% of loci after bowtie filtering):\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ex_cat_loci_similar.png?raw=true)\n",
+    "\n",
+    "Notice reading the sequences from the left, that stick out a bit, how similar those ~10 sequences are. That's terrifying!"
    ]
   },
   {
