added img for NB

--- a/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
@@ -143,8 +143,10 @@
     "Example line of code from generated bash script:\n",
     "\n",
     "```\n",
-    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o Stacks_m10 -p 10 -M 10 -r -d \n",
-    "```\n"
+    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m7 -p 10 -M 7 -r -d \n",
+    "\n",
+    "```\n",
+    "And th"
    ]
   },
   {
