renamed img for NB, updated NB

--- a/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
@@ -146,7 +146,9 @@
     "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m7 -p 10 -M 7 -r -d \n",
     "\n",
     "```\n",
-    "And th"
+    "And the plot of retained ustacks loci looked like:\n",
+    "\n",
+    "![image]()"
    ]
   },
   {
