added img for NB, updated NBs

--- a/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
@@ -34,18 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mismatch parameter 7\n",
+    "## Mismatch parameter 3\n",
+    "I used this parameter value in my first iteration of the Stacks pipeline, in this [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing/CRAGIG_RUN1.ipynb).\n",
     "\n",
-    "#### ``ustacks``"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "#### ``ustacks``\n",
+    "\n",
     "I used my ``easy_ustacks`` script to run ``ustacks``, but outside of the notebook because it's interactive in the terminal."
    ]
   },
@@ -124,13 +117,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running easy_ustacks looked like:\n",
+    "<br>\n",
+    "\n",
+    "```\n",
+    "```\n",
+    "\n",
+    "Example line of code from generated bash script:\n",
+    "\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "And the plot of retained ustacks loci looked like:\n",
+    "\n",
+    "![image]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mismatch parameter 7\n",
+    "\n",
+    "#### ``ustacks``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running easy_ustacks looked like:\n",
+    "<br>\n",
+    "\n",
+    "```\n",
+    "$ python easy_ustacks.py -t fastq -i ../../../../WorkingFolder/Stacks -r -d -o ../../../../WorkingFolder/Stacks_m7 -m 10 -M 7 -p 10 -c ustacks_loci_counts_20170503.txt -P ../../../../WorkingFolder/popmap_cragigrun1_m10.txt\n",
+    "```\n",
+    "\n",
+    "Example line of code from generated bash script:\n",
+    "\n",
+    "```\n",
+    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m7 -p 10 -M 7 -r -d\n",
+    "\n",
+    "```\n",
+    "And the plot of retained ustacks loci looked like:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ret_loc_after_ustacks_m7_20170503.png?raw=true)"
+   ]
   },
   {
    "cell_type": "code",
@@ -179,7 +214,7 @@
     "Example line of code from generated bash script:\n",
     "\n",
     "```\n",
-    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m7 -p 10 -M 7 -r -d \n",
+    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m10 -p 10 -M 10 -r -d \n",
     "\n",
     "```\n",
     "And the plot of retained ustacks loci looked like:\n",
@@ -217,6 +252,29 @@
     "## Mismatch parameter 13\n",
     "\n",
     "#### ``ustacks``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running easy_ustacks looked like:\n",
+    "<br>\n",
+    "\n",
+    "```\n",
+    "$ python easy_ustacks.py -t fastq -i ../../../../WorkingFolder/Stacks -r -d -o .\n",
+    "./../../../WorkingFolder/Stacks_m13 -m 10 -M 13 -p 10 -c ustacks_loci_counts_m13_20170503.txt -P ../../../../WorkingFolder/popmap_cragigrun1_m10.txt\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Example line of code from generated bash script:\n",
+    "\n",
+    "```\n",
+    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m13 -p 10 -M 13 -r -d \n",
+    "```\n",
+    "And the plot of retained ustacks loci looked like:\n",
+    "\n",
+    "![image]()"
    ]
   },
   {
