added img for NB

--- a/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
@@ -124,11 +124,15 @@
     "<br>\n",
     "\n",
     "```\n",
+    "$ python easy_ustacks.py -t fastq -i ../../../../WorkingFolder/Stacks -r -d -o .\n",
+    "./../../../WorkingFolder/Stacks_m3 -m 10 -M 3 -p 10 -c ustacks_loci_counts_m3_20170505.txt -P ../../../../WorkingFolder/popmap_cragigrun1_m10.txt\n",
+    "\n",
     "```\n",
     "\n",
     "Example line of code from generated bash script:\n",
     "\n",
     "```\n",
+    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m3 -p 10 -M 3 -r -d\n",
     "\n",
     "```\n",
     "And the plot of retained ustacks loci looked like:\n",
@@ -274,7 +278,7 @@
     "```\n",
     "And the plot of retained ustacks loci looked like:\n",
     "\n",
-    "![image]()"
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ret_loci_after_ustacks_m13_20170505.png?raw=true)"
    ]
   },
   {
