added img for m16 and updated NB

--- a/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
@@ -137,7 +137,7 @@
     "```\n",
     "And the plot of retained ustacks loci looked like:\n",
     "\n",
-    "![image]()"
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ret_loci_after_ustacks_m3_20170505.png?raw=true)"
    ]
   },
   {
@@ -279,6 +279,35 @@
     "And the plot of retained ustacks loci looked like:\n",
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ret_loci_after_ustacks_m13_20170505.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mismatch parameter 16\n",
+    "\n",
+    "#### ``ustacks``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running easy_ustacks looked like:\n",
+    "<br>\n",
+    "\n",
+    "```\n",
+    "```\n",
+    "\n",
+    "Example line of code from generated bash script:\n",
+    "\n",
+    "```\n",
+    "stacks ustacks -f ../../../../WorkingFolder/Stacks/FG009.fq -i 0 -m 10 -t fastq -o ../../../../WorkingFolder/Stacks_m16 -p 10 -M 16 -r -d \n",
+    "```\n",
+    "And the plot of retained ustacks loci looked like:\n",
+    "\n",
+    "![image]()"
    ]
   },
   {
