--- a/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
@@ -735,6 +735,8 @@
    "source": [
     "## Investigating a la Ilut etal 2014\n",
     "\n",
+    "**20170509**\n",
+    "\n",
     "In [Ilut et al 2014](https://www.hindawi.com/journals/bmri/2014/675158/abs/), the authors develop a method for choosing an appropriate mismatch parameter. Essentially, they increase mismatch, and track the percentage of homozygous, heterozygous, and polyploid genotypes within individuals. Where they asymptote is a balance between allowing for lumping of paralogous loci, and oversplitting loci. Here's the main figure for this:\n",
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ilut_et_al_2014_mainfigs.png?raw=true)"
@@ -1231,6 +1233,13 @@
     "plt.ylabel(\"Percentage of total genotypes\")\n",
     "plt.legend((hom, het, poly),(\"Homozygous\",\"Heterozygous\",\"Polyploid\"))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I do want to hesitate a little in the interpretation of this figure, because I'm not confident in the clustering method in ustacks given the high repetitve content and higher SNP/indel right. Otherwise, it looks like according to how Ilut draws the line, I'd want around 10 mismatches to best balance oversplitting + undersplitting."
    ]
   },
   {
