updated NBs, added img for NB

--- a/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Dialing_in_mismatch_parameter_to_correctly_assemble_loci.ipynb
@@ -1424,7 +1424,8 @@
    },
    "source": [
     "I do want to hesitate a little in the interpretation of this figure, because I'm not confident in the clustering method in ustacks given the high repetitve content and higher SNP/indel rate. Also, the plots from the paper all seem to show the homozygote curve decreasing as M increases, and the heterozygous curve increasing as M increases, and I see neither. Otherwise, it looks like according to how Ilut draws the line, I'd want around 10 mismatches to best balance oversplitting + undersplitting.\n",
-    "\n"
+    "\n",
+    "In a different window"
    ]
   },
   {
