--- a/CRAGIG_run1/Notebooks/data_processing/Preliminary_findings_investigating_mismatch_parameter_effects.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Preliminary_findings_investigating_mismatch_parameter_effects.ipynb
@@ -24,9 +24,11 @@
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/cstacks_n_on_catloci_20170509.png?raw=true)\n",
     "\n",
-    "I then went through each individual alleles.tsv and snps.tsv files after ``ustacks`` and \"called\" genotypes. If there were two alleles listed in the alleles.tsv files, then I called it a heterozygote. If there were more than two, I called it polyploid. And then, because the alleles.tsv files don't include monomorphic loci, I went through the snps.tsv files and counted the number of loci where there were no SNPs present. This isn't perfect, because it doesn't include a genotype calling model the way the later parts of the pipeline do, but this seemed like a good start. Results:\n",
+    "I then went through each individual alleles.tsv and snps.tsv files after ``ustacks`` and \"called\" genotypes. If there were two alleles listed in the alleles.tsv files, then I called it a heterozygote. If there were more than two, I called it polyploid. And then, because the alleles.tsv files don't include monomorphic loci, I went through the snps.tsv files and counted the number of loci where there were no SNPs present. This isn't perfect, because it doesn't include a genotype calling model dependent on read depth, etc., the way the later parts of the pipeline do, but this seemed like a good start. Results:\n",
     "\n",
-    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ilut_fig_FG009_20170509.png?raw=true)"
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ilut_fig_FG009_20170509.png?raw=true)\n",
+    "\n",
+    "If you compare my plot to the figures in the Ilut et al 2014 paper, you'll notice that my homozygous line remains the same, whereas theirs"
    ]
   }
  ],
