--- a/CRAGIG_run1/Notebooks/data_processing/Preliminary_findings_investigating_mismatch_parameter_effects.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Preliminary_findings_investigating_mismatch_parameter_effects.ipynb
@@ -28,8 +28,17 @@
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ilut_fig_FG009_20170509.png?raw=true)\n",
     "\n",
-    "If you compare my plot to the figures in the Ilut et al 2014 paper, you'll notice that my homozygous line remains the same, whereas theirs"
+    "If you compare my plot to the figures in the Ilut et al 2014 paper, you'll notice that my homozygous line remains the same, whereas theirs decreases as mismatch increases. Also, my heterozygous curve decreases as theirs increases. I'm trying to wrap my head around whether there could be different biological mechanisms underlying these differences, or if it's more likely an error in my pipeline."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
