added imgs for file, updated NB

--- a/CRAGIG_run1/Notebooks/learning_iPyrad/Learning_ipyrad_output_files.ipynb
+++ b/CRAGIG_run1/Notebooks/learning_iPyrad/Learning_ipyrad_output_files.ipynb
@@ -99,12 +99,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clustering is one of the most important and sensitive steps. So it's worth understanding what's in the s3_cluster_stats.txt files. I talked to Katherine on the phone to help make sense of the headers, because the documentation is not extremely thorough (the cost of the writers making everything sleek and simple!). So, here's the file:"
+    "Clustering is one of the most important and sensitive steps. So it's worth understanding what's in the s3_cluster_stats.txt files. I talked to Katherine on the phone to help make sense of the headers, because the documentation is not extremely thorough (the cost of the writers making everything sleek and simple!). So, here's the file:\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/ex_cluster_stats_file.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I wrote a script that produces scatter plots comparing different output stats. Script lives [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/data_exploration/ipyrad_clust_stats_plots.py). It allows optional flags so you can specify which plots you want made. \n",
+    "\n",
+    "Example usage:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -113,31 +124,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        clusters_total  hidepth_min clusters_hidepth avg_depth_total avg_depth_mj avg_depth_stat sd_depth_total sd_depth_mj sd_depth_stat filtered_bad_align\r\n",
-      "FG001            28719         10.0            18878          140.59       212.31         212.31        1057.95     1299.12       1299.12                  0\r\n",
-      "FG009            31799         10.0            19670          164.59       264.19         264.19        1525.65     1933.09       1933.09                  0\r\n",
-      "FG100_B          27072         10.0            18151          140.58       208.32         208.32         666.99      805.98        805.98                  0\r\n",
-      "FG102_B          32437         10.0            18407          103.80       180.36         180.36         877.05     1158.43       1158.43                  0\r\n",
-      "FG205            28809         10.0            18786          148.52       226.15         226.15        1278.66     1577.97       1577.97                  0\r\n",
-      "FG212             1568         10.0             1550          333.15       336.95         336.95        3951.17     3973.89       3973.89                  0\r\n",
-      "Q314             32843         10.0            19094          104.75       177.80         177.80         646.92      840.90        840.90                  0\r\n",
-      "Q324             47166         10.0            22765           79.79       161.41         161.41         605.97      864.82        864.82                  0\r\n",
-      "Q330             63309         10.0            30700           53.00       104.52         104.52         470.61      671.98        671.98                  0\r\n"
+      "/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts/data_exploration\n"
      ]
     }
    ],
    "source": [
-    "!head ./cragig002_clust_0.82/s3_cluster_stats.txt"
+    "cd /mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts/data_exploration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: ipyrad_clust_stats_plots.py [-h] -a ASSEMBLY -i INFILE [-o OUTDIR] [-x]\r\n",
+      "                                   [-y] [-z]\r\n",
+      "\r\n",
+      "Produces plots from ipyrad cluster stats output file\r\n",
+      "\r\n",
+      "optional arguments:\r\n",
+      "  -h, --help            show this help message and exit\r\n",
+      "  -a ASSEMBLY, --assembly ASSEMBLY\r\n",
+      "                        Assembly name\r\n",
+      "  -i INFILE, --infile INFILE\r\n",
+      "                        Path to cluster stats output file from ipyrad\r\n",
+      "  -o OUTDIR, --outdir OUTDIR\r\n",
+      "                        Path to directory for output files\r\n",
+      "  -x                    Make scatter plot showing total number of clusters vs\r\n",
+      "                        number of clusters filtered for depth\r\n",
+      "  -y                    Make plot showing average depth with majority rule vs\r\n",
+      "                        number of clusters filtered for depth\r\n",
+      "  -z                    Make plot showing standard deviation of read depth\r\n",
+      "                        with majority rule vs number of clusters filtered for\r\n",
+      "                        depth\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python ipyrad_clust_stats_plots.py -h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plots look like this:\n",
+    "\n",
+    "![img]()\n",
+    "![img]()\n",
+    "![img]()"
+   ]
   }
  ],
  "metadata": {
