--- a/CRAGIG_run1/Notebooks/learning_iPyrad/Testing_ipyrad_on_my_data.ipynb
+++ b/CRAGIG_run1/Notebooks/learning_iPyrad/Testing_ipyrad_on_my_data.ipynb
@@ -310,6 +310,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Did the clustering similarity threshold parameter affect the number of biallelic loci out the back end?\n",
+    "\n",
+    "Yes, as expected it increased as similarity threshold increased."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -487,8 +496,19 @@
    "source": [
     "## Does the clustering similarity threshold affect the Fis distribution?\n",
     "\n",
-    "Barely."
+    "Barely if at all!\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/comp_fis_10scallops_sim_20170531.png?raw=true)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
