added new notebook for combined lanes, updated NB

--- a/CRAGIG_run2/Notebooks/First Look at CRAGIG_run2.ipynb
+++ b/CRAGIG_run2/Notebooks/First Look at CRAGIG_run2.ipynb
@@ -77,11 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0bc993a9ade4edb86b859ff1daee1990  CRAGIG_RUN2_2.fq.gz\r\n"
+     ]
+    }
+   ],
    "source": [
     "!md5sum CRAGIG_RUN2_2.fq.gz"
    ]
@@ -94,8 +102,17 @@
     "\n",
     "``0bc993a9ade4edb86b859ff1daee1990  raw/CRAGIG_RUN2/CRAGIG_RUN2_2.fq.gz``\n",
     "\n",
-    "Reverse reads successfully downloaded"
+    "Reverse reads successfully downloaded!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
